src/test/deca/context/invalid/Objet/instanceOf_following.des
InstanceOf must be followed  by a class type
